Update MAIL_API URL in nabidky.html

--- a/nabidky.html
+++ b/nabidky.html
@@ -42,7 +42,7 @@ th{background:#1f2a6d;color:white}
 const DATA_API = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRc1EKWsR4iHnhk1PSgVAQ5u_YfM481jOzs9mxzXLvIZ0bhtz0TFRAAzw_15LJhvNSpyzb6dMA6IK0r/pub?output=csv";  
 
 // ===== MAIL API =====
-const MAIL_API = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLgq970FlfsN2GEl6p3pTagtPpHMDWlg4JYxlVvKQYn6abQ9GZdswPfOqfFNemqn2VfXLw6F0cFWIfkDCC6niEIADCTQs3podsA7nnn9ioAyB12esWoTGQZDWYfkVpLuTNOqOboh41371sx0muZ-oIDwo-M2TBVXjE3Z2DAJpFHnQAi2ln7FKdKjQrdukyzDrryJuaXfG9TB7rF53z9cre1PPVoh-w3SXwAnmBQguBFOCMxmgijBn4yFJ7CoQcN6wLUIJIqZwBi-OJPAMN4xX6j6PHUMxe1KtQX8CfNO&lib=M1uTt_cSLFRneBAl08ihj4ATv7YRnEe7N";
+const MAIL_API = "https://script.google.com/macros/s/AKfycbyv-VrDI3swF6_a04Q8QiiRBpMWRRRGqxdSSTtYHcXMR5zEEtV39s3Z7rD-INh8A-kXew/exec";
 
 fetch(DATA_API)
 .then(r=>r.json())
