--- a/nabidky.html
+++ b/nabidky.html
@@ -1,83 +1,59 @@
-<!DOCTYPE html>
-<html lang="cs">
-<head>
-<meta charset="UTF-8">
-<title>Nabídky úklidu</title>
-<style>
-body{font-family:Arial;background:#f4f6fb;margin:0;padding:20px}
-h1{text-align:center}
-table{width:100%;border-collapse:collapse;background:white}
-th,td{border:1px solid #ccc;padding:8px;text-align:left}
-th{background:#1f2a6d;color:white}
-.lock{color:red;font-weight:bold}
-.btn{padding:6px 10px;background:#1f2a6d;color:white;border:none;border-radius:5px;cursor:pointer}
-</style>
-</head>
-
-<body>
-
-<h1>Nabídky úklidu</h1>
-<p style="text-align:center">Kontakty jsou skryté 🔒 – odemknou se po zaplacení</p>
-
-<table>
-<thead>
-<tr>
-<th>Vložení</th>
-<th>Město</th>
-<th>Dojezd</th>
-<th>Typ úklidu</th>
-<th>Dostupnost</th>
-<th>Cena</th>
-<th>Zkušenost</th>
-<th>Poznámka</th>
-<th>Kontakt</th>
-</tr>
-</thead>
-
-<tbody id="data"></tbody>
-</table>
-
 <script>
-// ===== DATA API =====
-const DATA_API = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLgUTQlY34l62hKBqMhtIr3UZpRHbgEAjsKYaTFg4V2IP3Mqtpb2PEFhdC0aM-ze_DrgADZ_7vbrJD8dp842NGEGlpvUueQAqVkIcb6bvY4L3BwhjvR-ewplWoVBgCkXRKT3myGvKXs0JwKFeKtNG1oJIUruSgcWjWawpbaaiP7iQuFgByY7Di9cTCGOLK4f9rdWCM_XZkKf62Q9jgTcwp_jfx63J2CPYGYHAFFmmdQtrRv2WOJ98RN6jO-3Xg361iR5_qPfmOdI-tvJ1FPWLVg8u3hVyeihhWPki4dg&lib=M1uTt_cSLFRneBAl08ihj4ATv7YRnEe7N";  
+const SHEET_CSV =
+"https://docs.google.com/spreadsheets/d/e/2PACX-1vRc1EKWsR4iHnhk1PSgVAQ5u_YfM481jOzs9mxzXLvIZ0bhtz0TFRAAzw_15LJhvNSpyzb6dMA6IK0r/pub?output=csv";
 
-// ===== MAIL API =====
-const MAIL_API = "https://script.google.com/macros/s/AKfycbxJs061Eq-DJpWFkqYS5BMdyDG1KdhzfpP7tu8zVHXK7bAJ2GOkcvNqjZvBv355zcpVKw/exec";
+const MAIL_API =
+"https://script.google.com/macros/s/AKfycbxJs061Eq-DJpWFkqYS5BMdyDG1KdhzfpP7tu8zVHXK7bAJ2GOkcvNqjZvBv355zcpVKw/exec";
 
-fetch(DATA_API)
-.then(r=>r.json())
-.then(data=>{
+// jednoduchý CSV parser
+function parseCSV(text){
+  const rows=[];
+  let row=[],cell="",q=false;
+  for(let c of text){
+    if(c=='"') q=!q;
+    else if(c==","&&!q){row.push(cell);cell="";}
+    else if(c=="\n"&&!q){row.push(cell);rows.push(row);row=[];cell="";}
+    else cell+=c;
+  }
+  if(cell) row.push(cell);
+  if(row.length) rows.push(row);
+  return rows;
+}
+
+fetch(SHEET_CSV)
+.then(r=>r.text())
+.then(csv=>{
+  const data=parseCSV(csv).slice(1);
   let html="";
-  data.forEach((row,i)=>{
+
+  data.forEach((cols,i)=>{
     html+=`
     <tr>
-      <td>${row.vlozeni}</td>
-      <td>${row.mesto}</td>
-      <td>${row.dojezd}</td>
-      <td>${row.typUklidu}</td>
-      <td>${row.dostupnost}</td>
-      <td>${row.cena}</td>
-      <td>${row.zkusenost}</td>
-      <td>${row.poznamka}</td>
-      <td><button class="btn" onclick="unlock(${i})">Odemknout kontakt</button></td>
+      <td>${cols[0] || ""}</td>   <!-- vložení -->
+      <td>${cols[4] || ""}</td>   <!-- město -->
+      <td>${cols[5] || ""}</td>   <!-- dojezd -->
+      <td>${cols[6] || ""}</td>   <!-- typ úklidu -->
+      <td>${cols[7] || ""}</td>   <!-- dostupnost -->
+      <td>${cols[8] || ""}</td>   <!-- cena -->
+      <td>${cols[9] || ""}</td>   <!-- zkušenost -->
+      <td>${cols[10] || ""}</td>  <!-- poznámka -->
+      <td><button class="btn" onclick="unlock(${i})">Odemknout</button></td>
     </tr>`;
   });
+
   document.getElementById("data").innerHTML = html;
 });
 
 function unlock(id){
-  const email = prompt("Zadej e-mail pro zaslání platebních údajů:");
+  const email = prompt("Zadejte e-mail:");
   if(!email) return;
 
   fetch(MAIL_API,{
     method:"POST",
     headers:{"Content-Type":"application/json"},
-    body:JSON.stringify({email:email,offer:id})
-  });
-
-  alert("Platební údaje byly odeslány na e-mail.");
+    body:JSON.stringify({email:email,offer:id,type:"nabidka"})
+  })
+  .then(()=>alert("E-mail byl odeslán."))
+  .catch(()=>alert("Chyba při odesílání."));
 }
 </script>
-
-</body>
-</html>
