--- a/nabidky.html
+++ b/nabidky.html
@@ -107,7 +107,7 @@ function unlockOffer(id) {
   const email = prompt("Zadejte e-mail pro zaslání platebních údajů:");
   if (!email) return;
 
-  fetch("https://script.google.com/macros/s/AKfycbyv-VrDI3swF6_a04Q8QiiRBpMWRRRGqxdSSTtYHcXMR5zEEtV39s3Z7rD-INh8A-kXew/exec", {
+  fetch("https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLiO99QCPmzOFN2lo8sgbBohokW2qKNpje9HfJwBuNJPmI40JBImjtiXID1jDu1QcI8XWVXrp5LXuN4AnGlPpsWh7_ce-rb-DC2pU0xfobqAizefbOCY112s8avwvq_TMftppy9tyDny4T7Ct-8qym5-AWmiltZ8nJ-X575cIxgKlNdnHeB8MpEXfZXHWPrVEqVIyTpEw-MCOw7y-KbcBj60UXUZvjyrZHwq5IPnIePv53IqU4JsLo7aV8itFimxy2BmOYfVGTXq2D7UXqMxo6yac-tvQlVx5sZGBfdq&lib=M1uTt_cSLFRneBAl08ihj4ATv7YRnEe7N", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
