--- a/index.html
+++ b/index.html
@@ -1,26 +1,55 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <title>Kliknauklid</title>
+  <meta charset="UTF-8">
+  <title>Nabídka úklidu</title>
+  <style>
+    body { font-family: Arial, sans-serif; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; }
+    th { background: #f5f5f5; }
+
+    #popup {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+    }
+    #popupContent {
+      background: white;
+      padding: 20px;
+      width: 300px;
+      margin: 100px auto;
+    }
+  </style>
 </head>
 <body>
 
-<h1>KLIK NA ÚKLID 🧹</h1>
+<h1>Nabídka uklízeček</h1>
 
-<p>Platforma pro propojení ubytovatelů a uklízeček</p>
+<table>
+  <thead>
+    <tr>
+      <th>Jméno</th>
+      <th>Město</th>
+      <th>Akce</th>
+    </tr>
+  </thead>
+  <tbody id="offers"></tbody>
+</table>
 
-<hr>
+<!-- POPUP -->
+<div id="popup">
+  <div id="popupContent">
+    <h3>Zadejte email</h3>
+    <input type="email" id="email" placeholder="email@email.cz" style="width:100%">
+    <br><br>
+    <button onclick="sendEmail()">Odeslat</button>
+    <button onclick="closePopup()">Zavřít</button>
+  </div>
+</div>
 
-<h2>Poptávky po úklidu</h2>
-<p>Zde budou aktuální poptávky</p>
-
-<h2>Nabídky uklízeček</h2>
-<p>Zde budou nabídky uklízeček</p>
-
-<hr>
-
-<p>Projekt ve vývoji ❤️</p>
-
+<script src="script.js"></script>
 </body>
 </html>
