--- a/nabidky.html
+++ b/nabidky.html
@@ -1,4 +1,4 @@
-const API_URL = "SEM_VLOZ_URL_WEB_APP";
+const API_URL = "https://script.google.com/macros/s/AKfycbygkTQmUoANTqR5UqDcxpjicl0jL8A0kED51ws1QZHbh9FpIBwWH02pLMzknpT45iVYQQ/exec";
 
 let selectedOfferId = null;
 
