--- a/nabidky.html
+++ b/nabidky.html
@@ -1,3 +1,57 @@
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="UTF-8">
+  <title>Nabídka úklidu</title>
+  <style>
+    body { font-family: Arial, sans-serif; }
+    table { border-collapse: collapse; width: 100%; margin-top: 20px; }
+    th, td { border: 1px solid #ccc; padding: 8px; }
+    th { background: #f5f5f5; }
+
+    #popup {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+    }
+
+    #popupContent {
+      background: white;
+      padding: 20px;
+      width: 300px;
+      margin: 100px auto;
+    }
+  </style>
+</head>
+<body>
+
+<h1>Nabídka uklízeček</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Jméno</th>
+      <th>Město</th>
+      <th>Akce</th>
+    </tr>
+  </thead>
+  <tbody id="offers"></tbody>
+</table>
+
+<!-- POPUP -->
+<div id="popup">
+  <div id="popupContent">
+    <h3>Zadejte email</h3>
+    <input type="email" id="email" placeholder="email@email.cz" style="width:100%">
+    <br><br>
+    <button onclick="sendEmail()">Odeslat</button>
+    <button onclick="closePopup()">Zavřít</button>
+  </div>
+</div>
+
+<script>
 const API_URL = "https://script.google.com/macros/s/AKfycbygkTQmUoANTqR5UqDcxpjicl0jL8A0kED51ws1QZHbh9FpIBwWH02pLMzknpT45iVYQQ/exec";
 
 let selectedOfferId = null;
@@ -50,3 +104,7 @@ function sendEmail() {
     closePopup();
   });
 }
+</script>
+
+</body>
+</html>
